[package]
name = "bhtmp"
description = "A package to read .bhtmp files."
license = "GPL-3.0-only"
version = "1.0.0"
edition = "2021"
authors = ["asciiboi"]
repository = "https://github.com/asciiboi/bhtmp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"

